# CGPPL

./: README.md  pyproject.toml
docs/: annotation-target-diagnostics.md  construction-diagnostics.md  delete-target-runtime-wiring.md  endpoint-construction-policy.md  implementation-plan.md  mutation-target-direct-runtime-wiring.md  positive-require-runtime-wiring.md  testing.md  unbound-graph-ref-diagnostics.md
examples/: add-replacement.cgppl  backtracking.cgppl  delete-node.cgppl  endpoint-auto-create.cgppl  hello.cgppl  inline-construction-attrs.cgppl  label-rewrite.cgppl  match-attrs.cgppl  match-node.cgppl  match-where.cgppl  multi-label.cgppl  negative-require.cgppl  require-attrs.cgppl  require-node.cgppl  sequence-delete.cgppl  set-attrs.cgppl  tiny-graph.json  try-fallback.cgppl  unset-annotations.cgppl  variable-bound-construction-ids.cgppl  where-vars.cgppl
tests/: test_backtracking.py  test_cli.py  test_cli_where_variables.py  test_diagnostics.py  test_endpoint_auto_create_runtime.py  test_endpoint_refs.py  test_graph.py  test_inline_construction_attrs.py  test_lexer.py  test_match_cli.py  test_match_runtime.py  test_multi_label.py  test_negative_require.py  test_parser.py  test_runtime.py  test_runtime_construction_direct_wiring.py  test_runtime_diagnostics.py  test_runtime_mutation_target_direct_wiring.py  test_runtime_structured_annotation_target_diagnostics.py  test_runtime_structured_bound_diagnostics.py  test_runtime_structured_construction_diagnostics.py  test_runtime_structured_delete_diagnostics.py  test_runtime_structured_diagnostics.py  (+8 more)
(+15 files in other folders)
